migrate to Vite

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -5,6 +5,7 @@
     "about": "Über uns",
     "sign-up": "Anmeldung",
     "placeholder-search": "Suche..",
+    "nothing-searched": "Nichts gefunden",
     "womens-fashion": "Damenmode",
     "mans-fashion": "Männermode",
     "electronics": "Elektronik",
