--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -5,6 +5,7 @@
     "about": "About",
     "sign-up": "Sign Up",
     "placeholder-search": "What are you looking for?",
+    "nothing-searched": "Nothing searched",
     "womens-fashion": "Women's Fashion",
     "mans-fashion": "Man's Fashion",
     "electronics": "Electronics",
