--- a/src/i18n/locales/uk.json
+++ b/src/i18n/locales/uk.json
@@ -5,6 +5,7 @@
     "about": "Про нас",
     "sign-up": "Реєстрація",
     "placeholder-search": "Пошук",
+    "nothing-searched": "Нічого не знайдено",
     "womens-fashion": "Жіночий одяг",
     "mans-fashion": "Чоловічий одяг",
     "electronics": "Електроніка",
