products rewrited from store  to get-requests

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -76,6 +76,7 @@
     "support": "Unterstützung",
     "account": "Konto",
     "my-account": "Mein Konto",
+    "all-moved-to-cart": "Alle in den Warenkorb gelegt",
     "log-in": "Einloggen",
     "logout": "Abmeldung",
     "register": "Register",
