--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -76,6 +76,7 @@
     "support": "Support",
     "account": "Account",
     "my-account": "My Account",
+    "all-moved-to-cart": "All moved to cart",
     "log-in": "Log In",
     "logout": "Logout",
     "register": "Register",
