--- a/src/i18n/locales/uk.json
+++ b/src/i18n/locales/uk.json
@@ -76,6 +76,7 @@
     "support": "Підтримка",
     "account": "Аккаунт",
     "my-account": "Мій Аккаунт",
+    "all-moved-to-cart": "Усе переміщено до кошика",
     "log-in": "Вхід",
     "logout": "Вихід",
     "register": "Реєстрація",
